js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleB.1.kt
@file:JsModule("./js-module-b.mjs")

external fun externalDemoFunction(): Int
